--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 } 
+
+.bg-code-viewer {
+  background-color: color-mix(in hsl, hsl(var(--background)), black 15%);
+}
