--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -74,3 +74,25 @@
     @apply bg-background text-foreground;
   }
 }
+
+ 
+
+/* Стили для скроллбара */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Цвет ползунка */
+  border-radius: 4px; /* Закругление */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Цвет ползунка при наведении */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Цвет трека */
+  border-radius: 4px; /* Закругление */
+}
