--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -48,7 +48,7 @@
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
  
     --muted: 217.2 32.6% 17.5%;
@@ -75,24 +75,21 @@
   }
 }
 
- 
-
-/* Стили для скроллбара */
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #888; /* Цвет ползунка */
-  border-radius: 4px; /* Закругление */
+  background-color: #888;
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Цвет ползунка при наведении */
+  background-color: #555;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Цвет трека */
-  border-radius: 4px; /* Закругление */
+  background-color: #f1f1f1;
+  border-radius: 4px;
 }
